--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,9 @@
 sonar.projectKey=nascitonicholas_ci-node-js-example
 sonar.organization=personal-development
-
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=ci-node-js-example
-#sonar.projectVersion=1.0
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+sonar.sources=src
+sonar.exclusions=**/*.test.js
+sonar.tests=src
+sonar.test.inclusions=**/*.test.js
+sonar.javascript.coveragePlugin=lcov
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
